##*****************************************************************************
## $Id: Makefile.am,v 1.1 2005-04-29 20:41:53 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

noinst_HEADERS = module.h
noinst_LTLIBRARIES = libmodule.la
libmodule_la_SOURCES = module.c
libmodule_la_CFLAGS = -I$(srcdir)/../../libcerebro\
		      -I$(srcdir)/../../libcommon
